# clang-libtooling-experiments

./: .clang-format  .gitignore  LICENSE  README.md  build_standalone_llvm_clang.py  build_utils.py  llvm-build-config-reldebug.jsonc  llvm-build-config.jsonc  my-llvm-config.json  setup_llvm_clang.py
comment-parser/: CMakeLists.txt  CommentParser.cpp  README.MD  test-comment-parser.h
comment-parser-association/: CMakeLists.txt  CommentParser.cpp  README.MD  RegisteredVariable.cpp  RegisteredVariable.h  test-comment-parser.h
example-loop-convert/: CMakeLists.txt  LoopConvert.cpp  README.md  test.cpp
example-recursive-ast-visitor/: CMakeLists.txt  FindClassDecls.cpp  README.md  test-find-class-decls.h
register-select/: CMakeLists.txt  ClassField.cpp  ClassField.h  ClassStruct.cpp  ClassStruct.h  Config.cpp  Config.h  Context.cpp  Context.h  DataRegister.h  DataRegisterASTConsumer.cpp  DataRegisterASTConsumer.h  DataRegisterFrontendAction.cpp  DataRegisterFrontendAction.h  DataRegisterUtils.cpp  DataRegisterUtils.h  DataRegisterVisitor.cpp  DataRegisterVisitor.h  DataRegistration.cmake  Logger.cpp  Logger.h  Options.cpp  Options.h  README.MD  RegisteredVariable.cpp  RegisteredVariable.h  Writer.cpp  Writer.h  build.sh  main.cpp  str_utils.cpp  str_utils.h
register-tests/: README-register-cases.md
register-tests/case-0/: MyClass.h  config.cfg  register.cpp
register-tests/case-1/: Child.h  Parent.h  config.cfg  register.cpp
register-tests/case-2/: ClassBaseData.h  config.cfg  config.register.json  main.h  register.cpp
register-tests/case-3/: ClassBaseData.h  config.cfg  register.cpp
register-tests/case-4/: GroundReaction.h  LandingGear.h  MathTypes.h  config.cfg  main.h  register.cpp
test-cases/: README.md
test-cases/case-0/: CMakeLists.txt  ExternalData.h  System.cpp  System.h
test-cases/case-1/: CMakeLists.txt  ExternalData.h  System.cpp  System.h  main.cpp
test-cases/case-2/: System.cpp  System.h  Vector3.h
test-cases/case-3/: ExtTypes.h  SubSystem.cpp  SubSystem.h  System.cpp  System.h  Vector3.cpp
test-cases/example-friend/: CMakeLists.txt  Vector3.cpp  main.cpp
test-cases/example-sandbox/: CMakeLists.txt  Eom.cpp  Eom.h  System.cpp  System.h  Vector3.h
